Final slides content.

--- a/week2/slides.tex
+++ b/week2/slides.tex
@@ -9,15 +9,15 @@
 \begin{document}
 
 \begin{frame}{Challenge}
-    You are standing at an unmarked intersection. One way is the city of
-    lies, and the other way is the city of truth.
+    You are standing at an unmarked intersection. One way goes to Sydney, 
+    and the other way to Melbourne.
     \begin{itemize}
-        \item People from the city of lies always lie.
-        \item People from the city of truth always tell the truth.
+        \item People from Sydney always lie.
+        \item People from Melbourne always tell the truth.
     \end{itemize}
-    A person from one of these cities (you don't know which) is standing at
+    A person from one of these places (you don't know which) is standing at
     the intersection. Is there a question you can ask to find out the way to
-    the city of truth?\footnote{Pierce, Rod. (13 Sep 2013). ``City of Lies or Truth Puzzle''. Math Is Fun. Retrieved 4 Mar 2015 from http://www.mathsisfun.com/puzzles/city-of-lies-or-truth.html}
+    Melbourne?
 \end{frame}
 
 \begin{frame}
@@ -30,14 +30,36 @@
 % more beautiful. Like sausages, you don't wanna know how it's made.
 \stepcounter{subsection}
 
-\begin{frame}{Turn to the person next to you\ldots}
+\begin{frame}{}
+    \begin{itemize}
+        \item Tell everyone your name, and your most creative suggestion to
+            destroy a computer and/or lose data.
+        \item Are you doing the subject because you want to or have to?
+        \item Have you programmed in any other languages before? Which one(s)?
+        \item What is one piece of technology you wish existed?\footnote{\url{http://xkcd.com/1382/}}
+    \end{itemize}
 \end{frame}
 
-\begin{frame}{Second Slide Name Here}
+\begin{frame}{About Me}
+    \begin{itemize}
+        \item Matt Signorini
+        \item Masters of Science (Computer Science)
+    \end{itemize}
 \end{frame}
 
 \section{Basics of C Programming}
 \stepcounter{subsection}
+
+\begin{frame}{Agenda}
+    \begin{block}{Outcomes}
+        At the end of todays class, you should know how to:
+        \begin{itemize}
+            \item Write simple C programs using the jEdit text editor.
+            \item Compile and run C programs using a command line.
+            \item Use IO functions and arithmetic operators in C.
+        \end{itemize}
+    \end{block}
+\end{frame}
 
 \begin{frame}{Example: IO Basics}
     Write a program that asks the user to enter two numbers, read them in
