One final addition to the slides.

--- a/week2/slides.tex
+++ b/week2/slides.tex
@@ -77,6 +77,50 @@
     \end{block}
 \end{frame}
 
+% And now some ASCII art, for those who are dedicated enough to read my
+% LaTeX source code.
+%
+%
+%  _________________________________________
+% / Q: How many Californians does it take   \
+% | to screw in a light bulb? A: Five. One  |
+% | to screw in the light bulb and four to  |
+% | share the                               |
+% |                                         |
+% | experience. (Actually, Californians     |
+% | don't screw in                          |
+% |                                         |
+% | light bulbs, they screw in hot tubs.)   |
+% |                                         |
+% | Q: How many Oregonians does it take to  |
+% | screw in a light bulb? A: Three. One to |
+% | screw in the light bulb and two to fend |
+% | off all                                 |
+% |                                         |
+% | those Californians trying to share the  |
+% \ experience.                             /
+%  -----------------------------------------
+%      \
+%       \
+%              ,;;;;;;;,
+%             ;;;;;;;;;;;,
+%            ;;;;;'_____;'
+%            ;;;(/))))|((\
+%            _;;((((((|))))
+%           / |_\\\\\\\\\\\\
+%      .--~(  \ ~))))))))))))
+%     /     \  `\-(((((((((((\\
+%     |    | `\   ) |\       /|)
+%      |    |  `. _/  \_____/ |
+%       |    , `\~            /
+%        |    \  \           /
+%       | `.   `\|          /
+%       |   ~-   `\        /
+%        \____~._/~ -_,   (\
+%         |-----|\   \    ';;
+%        |      | :;;;'     \
+%       |  /    |            |
+%       |       |            |
 
 \end{document}
 
