Added some more to the week 3 slides.
Also added a line to .gitignore so that *.vrb files, which are generated by
minted it seems, are ignored.

--- a/week3/slides.tex
+++ b/week3/slides.tex
@@ -25,9 +25,6 @@
     \end{block}
 \end{frame}
 
-\begin{frame}{Second Slide Name Here}
-\end{frame}
-
 \section{Exercise: 3.2}
 \stepcounter{subsection}
 
@@ -116,6 +113,33 @@
     \end{minted}
 \end{frame}
 
+% I know you're only reading this for the ASCII art...
+%
+%
+%  ________________________________________
+% /  The master programmer moves from      \
+% | program to program without fear. No    |
+% | change in management can harm him. He  |
+% | will not be fired, even if the project |
+% | is canceled. Why is this? He is filled |
+% | with the Tao.                          |
+% |                                        |
+% | -- Geoffrey James, "The Tao of         |
+% \ Programming"                           /
+%  ----------------------------------------
+%      \
+%       \
+%        ("`-'  '-/") .___..--' ' "`-._
+%          ` *_ *  )    `-.   (      ) .`-.__. `)
+%          (_Y_.) ' ._   )   `._` ;  `` -. .-'
+%       _.. `--'_..-_/   /--' _ .' ,4
+%    ( i l ),-''  ( l i),'  ( ( ! .-'    
+%
+%
+% 
+% Remember to comment your code, especially for projects, because other
+% people will need to read it. You don't need to include any pretty ASCII
+% pictures like this though. It's ok, you can stop panicing now :)
 
 \end{document}
 
