Finished slides for week 3 tutorials

--- a/week3/slides.tex
+++ b/week3/slides.tex
@@ -113,6 +113,24 @@
     \end{minted}
 \end{frame}
 
+\section{Lab Exercises}
+\stepcounter{subsection}
+
+\begin{frame}{Exercises}
+    \begin{block}{Exercises}
+        \begin{itemize}
+            \item Exercise 3.6 -- List coins that add up to a specified value.
+            \item Exercise 3.7 -- Temperature conversions.
+        \end{itemize}
+    \end{block}
+    \begin{itemize}
+        \item Think about any \texttt{\#define} constants that you could use.
+        \item Support values between 0 cents and 99 cents to begin with, but
+            you could try to extend your program to support values greater
+            than 99 cents.
+    \end{itemize}
+\end{frame}
+
 % I know you're only reading this for the ASCII art...
 %
 %
