--- a/week3/slides.tex
+++ b/week3/slides.tex
@@ -14,6 +14,14 @@
     \titlepage
 \end{frame}
 
+\begin{frame}{Contact Info}
+    \begin{itemize}
+        \item Matt Signorini
+        \item Email: \texttt{msignorini@unimelb.edu.au}
+        \item Also LMS discussion forum
+    \end{itemize}
+\end{frame}
+
 \begin{frame}{Today's Workshop}
     \begin{block}{Agenda}
         In today's class, you should learn:
@@ -128,6 +136,7 @@
         \item Support values between 0 cents and 99 cents to begin with, but
             you could try to extend your program to support values greater
             than 99 cents.
+        \item Solutions available at \url{https://github.com/pkill-9/comp20005-workshops/}
     \end{itemize}
 \end{frame}
 
