--- a/week7/slides.tex
+++ b/week7/slides.tex
@@ -8,6 +8,8 @@
 
 \begin{document}
 
+\renewcommand{\tt}[1]{\texttt{#1}}
+
 \begin{frame}
     \titlepage
 \end{frame}
@@ -15,8 +17,8 @@
 \begin{frame}{Contact Info}
     \begin{itemize}
         \item Matt Signorini
-        \item Email: \texttt{msignorini@unimelb.edu.au}
-        \item Also LMS discussion forum
+        \item Email: \tt{msignorini@unimelb.edu.au}
+        \item Also LMS discussion forum for help
         \item My workshop solutions available at \url{https://github.com/pkill-9/comp20005-workshops/}
     \end{itemize}
 \end{frame}
@@ -25,6 +27,7 @@
     \begin{block}{Agenda}
         In today's class, you should learn:
         \begin{itemize}
+            \item blind text.
         \end{itemize}
     \end{block}
 \end{frame}
