Finished week 7 slides

--- a/week7/slides.tex
+++ b/week7/slides.tex
@@ -27,7 +27,9 @@
     \begin{block}{Agenda}
         In today's class, you should learn:
         \begin{itemize}
-            \item blind text.
+            \item Understand the basics of arrays in C.
+            \item Be able to write or modify programs that manipulate one
+                dimensional arrays.
         \end{itemize}
     \end{block}
 \end{frame}
