Finished week 10 slides.
Also added a default target to the makefile so that the slides pdf file
gets built.

--- a/week10/slides.tex
+++ b/week10/slides.tex
@@ -51,6 +51,9 @@
 
 \begin{frame}{Exercises}
     \begin{block}{Project 2}
+        In todays lab you will be working on assignment 2. By the end of
+        the session you should have at least finished stage 1, and be well
+        underway with stage 2.
     \end{block}
 \end{frame}
 
