--- a/week11/slides.tex
+++ b/week11/slides.tex
@@ -2,7 +2,7 @@
 
 \usetheme{Frankfurt}
 
-\title{Workshop 10 -- More Structs}
+\title{Workshop 10 -- Binary Numbers}
 \author{COMP20005 Engineering Computation}
 \institute{The University of Melbourne}
 
