Finished week 12 slides.

--- a/week12/slides.tex
+++ b/week12/slides.tex
@@ -27,11 +27,8 @@
     \begin{block}{Agenda}
         By the end of this class, you should:
         \begin{itemize}
-            \item Be able to convert numbers between decimal and binary
-                form for both two's complement integers and simple 
-                floating point numbers.
-            \item Be able to do simple arithmetic operations on numbers
-                in binary form.
+            \item Be able to identify an appropriate problem solving
+                strategy for a particular problem.
         \end{itemize}
     \end{block}
 \end{frame}
@@ -57,12 +54,19 @@
 \stepcounter{subsection}
 
 \begin{frame}{Exercises}
-    \begin{block}{Project 2}
-        Continue working on your projects. If you have finished stage 5,
-        try to further refine your work. Do you have some long functions?
-        Could your approach to the problem be better described in your
-        comments? (you \emph{do} have comments, right?)
+    \begin{block}{Lab Problems}
+        \begin{itemize}
+            \item[9.3] Program to deal cards for Poker.
+            \item[9.11] Rocket flight simulation.
+        \end{itemize}
     \end{block}
+\end{frame}
+
+\begin{frame}{9.11}
+    For those who don't have the blue book\ldots
+    \begin{figure}
+        \includegraphics[width=10cm]{e09-11.png}
+    \end{figure}
 \end{frame}
 
 %
